--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,10 +1,11 @@
 
 [theme]
-primaryColor = "#4A5F44"         # Rouge Salomon
-backgroundColor = "#FDF6EC"      # beige clair
-secondaryBackgroundColor = "#F2F2F2"  # Gris clair
-textColor = "#000000"            # Noir
+primaryColor = "#4A5F44"       # Vert pin doux
+backgroundColor = "#FDF6EC"    # Beige clair
+secondaryBackgroundColor = "#EAEAEA"  # Gris perle
+textColor = "#000000"          # Noir
 font = "sans serif"
+
 
 [server]
 headless = true
